# auto-video-jorawalic

./: .gitignore  AI_VIDEO_GENERATION_PROMPT.md  README.md  example_data.py  main.py  pyproject.toml  temp_manim_scene.py
data/: index.html  test.py
data/assets/gifs/: index.json
lib/: config.py  gifs_finder.py  images_finder.py  speech_generation.py  transcription.py
lib/ai/: ideas_generator.py  models.py  prompts.py  script_writer.py
lib/rag/chromadb/: search_gif_collection.py
lib/video/: video_generator.py
lib/video/manim/: example.py
lib/video/manim/manim_pipeline_manager/: index.py
main_classes/: giphy_client.py
main_classes/bing/: bing.py  downloader.py
utils/: download_cat_memes.py  generate_audio_video.py  utils.py
utils/calculate/: calculate_segment_durations.py
utils/preprocess/: create-vector-store.ipynb  preprocess.py
